--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <title>Logistic Regression with TensorFlow.js</title>
     <meta charset="UTF-8" />
-    <!-- Latest compiled and minified plotly.js JavaScript -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <style>
+      body {
+        font-family: sans-serif;
+      }
+    </style>
   </head>
 
   <body>
     <div id="loss-cont"></div>
     <div id="acc-cont"></div>
     <div id="confusion-matrix"></div>
-
+    
     <script src="src/index.js"></script>
   </body>
 </html>
