--- a/test.html
+++ b/test.html
@@ -3,24 +3,16 @@
   <head>
     <title>Logistic Regression with TensorFlow.js</title>
     <meta charset="UTF-8" />
+    
+    <link  type="text/css"  href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" rel="stylesheet"></link>
     <!-- Latest compiled and minified plotly.js JavaScript -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
 
   <body>
-    <div id="tutorial">
-    </div>
-    <div id="outcome-cont" />
-    <div id="followers-cont" />
-    <div id="follows-cont" />
-    <div id="glucose-cont" />
-    <div id="age-cont" />
-    <div id="glucose-age-cont" />
-    <div id="skin-bmi-cont" />
-    <div id="loss-cont"></div>
-    <div id="acc-cont"></div>
-    <div id="confusion-matrix"></div>
-
+    <table id="results">
+    </table>
+    
     <script src="src/test.js"></script>
   </body>
 </html>
